# VU_InternetOfThings_Tasks

./: .gitignore  README.md  README_assignment_3.md
t00_advanced_blinky/src/: main.c
t01_pressure_sensor/src/: main.c
t02_triggered_sensor/: prj.conf
t02_triggered_sensor/src/: main.c
t10_advanced_blinky/src/: main.c
t11_pressure_sensor/: prj.conf
t20_ble_sensor_device/: CMakeLists.txt  prj.conf  readme.txt
t20_ble_sensor_device/inc/: bt_sensor_service.h  sensors.h
t20_ble_sensor_device/src/: bt_sensor_service.c  main.c  sensors.c
t21_ble_scanner/: CMakeLists.txt  prj.conf  readme.txt
t21_ble_scanner/src/: main.c
t30_mqtt_gateway/: CMakeLists.txt  prj.conf  readme.txt
t30_mqtt_gateway/inc/: handlers.h  mqtt_config.h
t30_mqtt_gateway/src/: bt_handler.c  main.c  mqtt_handler.c  wifi_handler.c
t30_mqtt_gateway_threads/: CMakeLists.txt  prj.conf
t30_mqtt_gateway_threads/inc/: handlers.h
t30_mqtt_gateway_threads/src/: bt_handler.c  main.c  mqtt_handler.c
t40_ble_sensor_device/: CMakeLists.txt  prj.conf
t40_ble_sensor_device/inc/: rtc.h  sensors.h
t40_ble_sensor_device/src/: bt_sensor_service.c  main.c  rtc.c  sensors.c
t41_mqtt_gateway/: CMakeLists.txt  prj.conf
t41_mqtt_gateway/inc/: handlers.h  mqtt_config.h
t41_mqtt_gateway/src/: bt_handler.c  main.c  mqtt_handler.c
t42_thingsboard_docker/: README.md  docker-compose.yml  root_rule_chain.json  temperature_alarm_rule_chain.json  temperature_dashboard.json
